force-app/main/default/objects/Proposal_Discovery__c/Proposal_Discovery__c.object-meta.xml
<CustomObject>
    <label>Proposal Discovery</label>
    <nameField>
        <label>Proposal Discovery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Discoveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>