force-app/main/default/objects/Proposal_Discovery__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Proposal Discoveries</relationshipLabel>
    <relationshipName>Proposal_Discoveries</relationshipName>
    <type>Lookup</type>
</CustomField>