force-app/main/default/objects/Proposal_Discovery__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <label>Scope of Work</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gplvs_Main_Services</valueSetName>
    </valueSet>
</CustomField>